--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
     "description": "",
     "main": "app.ts",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon dist/app.js"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@types/express": "^4.16.1",
+        "@types/express": "^4.17.12",
+        "@types/node": "^15.12.2",
+        "nodemon": "^2.0.7",
         "tslint": "^5.12.1",
         "typescript": "^3.3.3"
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.16.4"
     }
 }
